# adac

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: api_reference.rst  conf.py  index.rst  installation.rst  quickstart.rst
examples/: export_plugin.py  live_training.py  make_dark_plots.py  make_plots.py
src/adac/: __init__.py  certificate.py  export.py  hotreload.py
src/adac/codegen/: __init__.py  flamo_to_faust.py
src/flamo_rt/: __init__.py
src/flamo_rt/codegen/: json_to_flamo.py
tests/: conftest.py  test_certificate.py  test_export.py  test_flamo_to_faust.py  test_flamo_to_json.py  test_hotreload.py  test_json_to_faust.py  test_package.py  test_param_extraction.py
tests/integration/: generate_flamo_ir.py  nice_reverb.dsp  test_ir_comparison.py
