# created by Facundo Franchino March 2026
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adac"
version = "0.1.0"
description = "automatic differentiable audio compilation: trained differentiable audio models to real-time FAUST DSP"
authors = [
    {name = "Facundo Franchino"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy",
]

[project.optional-dependencies]
full = [
    "flamo",
    "torch",
]
docs = [
    "Sphinx>=6.0.0",
    "pydata-sphinx-theme>=0.15.0",
    "sphinx-design>=0.5.0",
    "sphinx-copybutton>=0.5.0",
]
test = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
#integration tests need the faust toolchain and a full install, so the
#default run skips them; opt in with `pytest -m integration`.
addopts = "-m 'not integration'"
markers = [
    "integration: end-to-end tests requiring the faust toolchain and a full install",
]
